--- a/ProgOOPracticalClasses2016/.classpath
+++ b/ProgOOPracticalClasses2016/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/Anwender/Google Drive/devel/javaLibs/acm.jar" sourcepath="C:/Users/Anwender/Google Drive/devel/javaLibs/acm.zip"/>
+	<classpathentry kind="lib" path="acmLib/acm.jar" sourcepath="acmLib/acm.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
